force-app/main/default/objects/Clio_Note__c/Clio_Note__c.object-meta.xml
<CustomObject>
    <label>Clio Note</label>
    <nameField>
        <label>Clio Note Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clio Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>