force-app/main/default/objects/Clio_Note__c/fields/Clio_ID__c.field-meta.xml
<CustomField>
    <fullName>Clio_ID__c</fullName>
    <externalId>true</externalId>
    <label>Clio ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>