force-app/main/default/objects/Clio_Note__c/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <label>Detail</label>
    <length>64000</length>
    <type>LongTextArea</type>
</CustomField>