force-app/main/default/objects/Clio_Note__c/fields/Matter__c.field-meta.xml
<CustomField>
    <fullName>Matter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matter</label>
    <referenceTo>Matter__c</referenceTo>
    <relationshipLabel>Clio Notes</relationshipLabel>
    <relationshipName>Clio_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>