force-app/main/default/objects/Clio_Note__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Clio_ID__c</columns>
    <columns>Contact__c</columns>
    <columns>Matter__c</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>